6-14-23
* check the readme example config for latest schema *
enableTrailerSupport -> run actions when playing trailers
Support multiple minidsp - will get from API automatically
Support specifying slot(s) to use
other speedups and improvements 
use Denon avr to get codec for BEQ profile matching (more accurate than plex)
use both denon and plex to compare codecs, make sure they are playing whats expected. Randomly plex will just decide to transcode atmos because why not


6-21-23
Add support for detecting HDMI sync using madvr Envy. It will detect when media is synced and continue playing. 
This prevents a black screen but stuff is playing which is annoying
It also makes the denon codec detection more accurate
New config homeAssistant.envyName


9-10-23
Web UI flow for configuring server
New MQTT automations:
    * "topicbeqcurrentprofile": -> which current profile is loaded
    * "topicminidspmutestatus": -> true/false if minidsp(s) muted
    * "topicplayingstatus": -> true/false if the tool is playing
Some functionality changes, check the readme
HDMI Sync automation in testing
*Breaking changes* All config fields are lowercase now

10-9-23
Modify UUID filter to accept comma for multiple

12-sometime-23
* Breaking change - volume must now be mounted to /data
* log to a file
* add /logs endpoint
* add prelim jellyfin support
* new name/logo

2-1-24
* Preferred authors is a comma delimited whitelist
* fix cache on resume
* various speedups
* remove listen port config
* improve search by using tmdb 