@@ -64,7 +64,7 @@ jobs:
         with:
           context: .
           # platforms: linux/amd64,linux/arm64,linux/arm/v6,linux/arm/v7
-          push: ${{ github.event_name == 'pull_request' && github.head_ref == 'develop' }}
+          push: ${{ github.head_ref == 'master' || github.event_name == 'pull_request' && github.head_ref == 'develop' }}
           tags: ${{ steps.meta.outputs.tags }}
           # cache-from: type=gha
           # cache-to: type=gha,mode=max
